--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <body>
     <header>
         <a href="/catalog"> <img class="home" src="./img/home.svg" alt="home"></a>
-        <div class="devices-status"></div>
     </header>
     <div class="console">
         <div class="div-title">
@@ -27,6 +26,11 @@
         <button class="stop">Stop</button>
         <audio class="audio" src="">Audio</audio>
     </div>
+
+    <footer>
+        <div class="devices-status"></div>
+    </footer>
+
 
     <script src="./js/main.js"></script>
 </body>
