--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <button class="rec">Rec</button>
         <button class="stop">Stop</button>
-        <audio class="audio" src="">Audio</audio>
+        <!-- <audio class="audio" src="">Audio</audio> -->
     </div>
 
     <footer>
